# data-science

./: pyproject.toml  streamlit.py
notebooks/: linear_regression.ipynb  price_prediction.ipynb  xgmodel.pkl
